# Genesis

./: .gitignore  AGENTS.md  ARCHITECTURE.md  COLLAB.md  IMPROVEMENTS.md  INCIDENT.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SKILL.md  build_exe.py  demo.py  pyproject.toml  requirements.txt
benchmarks/: SUMMARY.md  express.md  fastapi.md  flask.md  run_benchmark.py
dojigiri/: __main__.py  analyzer.py  chunker.py  compliance.py  config.py  detector.py  discovery.py  fixer.py  hooks.py  languages.py  llm.py  llm_backend.py  llm_focus.py  mcp_format.py  mcp_server.py  metrics.py  report.py  report_html.py  storage.py
reviews/: 2026-03-06-ebee58f.review.json
tests/: README.md  conftest.py  test_analyzer.py  test_chunker.py  test_cli.py  test_compliance.py  test_config.py  test_debug_optimize.py  test_depgraph.py  test_detector.py  test_explain.py  test_features_v060.py  test_fixer.py  test_fp_reduction.py  test_integration.py  test_languages.py  test_llm_backend.py  test_mcp_integration.py  test_micro_queries.py  test_project.py  test_report.py  test_report_html.py  test_rules_command.py  test_semantic_similarity.py  test_semantic_smells_similarity.py  test_semantic_taint.py  test_storage.py  test_ts_callgraph.py  test_ts_cfg.py  test_ts_checks.py  test_ts_contracts.py  test_ts_nullsafety.py  test_ts_resource.py  test_ts_scope.py  test_ts_semantic.py  test_ts_smells.py  test_ts_taint.py  test_ts_taint_pathsensitive.py  test_ts_types.py  test_v060_features.py
wiz/: HANDOFF.md  __init__.py  __main__.py  analyzer.py  chunker.py  config.py  (+24 more)
wiz-vscode/: package.json
(+27 files in other folders)
